--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=authenticationAPI
 spring.datasource.url=jdbc:mysql://localhost:3306/authapi
 spring.datasource.username=root
-spring.datasource.password=485425cd
+spring.datasource.password=
+api.security.token.secret=${JWT_SECRET:my-secret-key}
 spring.jpa.hibernate.ddl-auto=update
